Fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,10 @@
 }
 
 .avatar {
-    max-width: 200px;
 }
 
 .header-details {
-    margin-left: 220px;
+    margin-bottom: 20px;
 }
 
 h1 {
